Fix social links

--- a/contact.html
+++ b/contact.html
@@ -54,12 +54,12 @@
              <div class="sidebar">
                 <div class="social-container">
                     <h3>Find me on:</h5>
-                    <div class="social" id="fb" style="float: left"><i class="icon-facebook"></i></div> 
-                    <div class="social" id="twitter" style="float: left"><i class="icon-twitter"></i></div>
-                    <div class="social" id="gp" style="float: left"><i class="icon-gplus"></i></div>
-                    <div class="social" id="github" style="float: left"><i class="icon-github-circled"></i></div>
-                    <div class="social" id="yt" style="float: left"><i class="icon-youtube"></i></div>
-                    <div class="social" id="spotify" style="float: left"><i class="icon-spotify"></i></div>
+                    <div class="social" id="fb" style="float: left"><a class="icon-facebook" href="http://facebook.com"></a></div> 
+                    <div class="social" id="twitter" style="float: left"><a class="icon-twitter" href="http://twitter.com"></a></div>
+                    <div class="social" id="gp" style="float: left"><a class="icon-gplus" href="http://plus.google.com"></a></div>
+                    <div class="social" id="github" style="float: left"><a class="icon-github-circled" href="http://github.com"></a></div>
+                    <div class="social" id="yt" style="float: left"><a class="icon-youtube" href="http://youtube.com"></a></div>
+                    <div class="social" id="spotify" style="float: left"><a class="icon-spotify" href="http://spotify.com"></a></div>
                 </div>
             </div>
             
